# sai-os

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: isobuild.md
sai_core/: __init__.py  __main__.py  config.py
sai_core/brain/: __init__.py  engine.py  memory.py  prompts.py  router.py
sai_core/daemon/: __init__.py  default_triggers.yaml  event_bus.py  events.py  monitor.py  notifier.py  proactive_agent.py  sai_daemon.py  scheduler.py  triggers.py
sai_core/shell/: __init__.py  cli.py  completer.py  formatter.py
sai_core/tools/: __init__.py  app_launcher.py  base.py  file_manager.py  media_player.py  package_manager.py  power_manager.py  screen_reader.py  system_maintenance.py  web_browser.py  window_manager.py
sai_core/voice/: __init__.py  engine.py  listener.py  speaker.py  transcriber.py
sai_desktop/: __init__.py  app.py
sai_desktop/assistant/: __init__.py  window.py
sai_desktop/launcher/: __init__.py
sai_desktop/notifications/: __init__.py
sai_desktop/panel/: __init__.py  panel.py
sai_desktop/theme/gtk-4.0/: gtk.css
sai_desktop/widgets/: __init__.py  dynamic_widget.py  manager.py
sai_installer/: __init__.py  agent.py  app.py  backend.py  config.py  style.css  tools.py  ui.py
scripts/: first-boot.sh  setup-backend.sh  setup-ollama.sh
